tests/__snapshots__/api-expect-only-fail-stderr.snap.txt
Error: The assertion was supposed to fail, but it passed.

Consider removing the '.fail' flag.

  2 | 
  3 | expect<string>().type.toBeString();
> 4 | expect.only.fail<string>().type.toBeString();
    | ^
  5 | 
  6 | expect.only.fail<never>().type.toBeString();
  7 | 

      at ./__typetests__/expect-only-fail.tst.ts:4:1

Error: The assertion was supposed to fail, but it passed.

Consider removing the '.fail' flag.

  13 |   test("is skipped?", () => {
  14 |     expect<never>().type.toBeVoid();
> 15 |     expect.only.fail<string>().type.toBeString();
     |     ^
  16 | 
  17 |     expect.only.fail<never>().type.toBeVoid();
  18 |   });

       at ./__typetests__/expect-only-fail.tst.ts:15:5

Error: The assertion was supposed to fail, but it passed.

Consider removing the '.fail' flag.

  27 | test.only("is number?", () => {
  28 |   expect.skip<string>().type.toBeNumber();
> 29 |   expect.fail<number>().type.toBeNumber();
     |   ^
  30 | 
  31 |   expect.fail<never>().type.toBeVoid();
  32 | });

       at ./__typetests__/expect-only-fail.tst.ts:29:3

